# HuLunTunZao-ai-reading-assistant

./: .editorconfig  .gitignore  README.md
backend/: config.py  main.py  requirements.txt
backend/agents/: _base.py  l2_agent.py  l3_agent.py  l4_agent.py  merge_agent.py  parse_agent.py  plot_agent.py
backend/api/: books.py  bubbles.py  reading.py  settings.py
backend/db/: connection.py  schema.py
backend/models/: schemas.py
backend/services/: book_service.py  bubble_service.py  export_service.py  import_service.py  processing.py  progress_tracker.py  tree_events.py
backend/tests/: test_parse_agent.py
frontend/: dev.bat  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/api/: client.ts  sse.ts
frontend/src/components/bubbles/: BubbleCard.tsx  BubbleStream.tsx  DepthToggle.tsx
frontend/src/components/common/: ProcessingProgress.tsx  Skeleton.tsx  Toast.tsx
frontend/src/components/layout/: BottomBar.tsx  TabBar.tsx
frontend/src/components/reader/: ReaderView.tsx
frontend/src/types/: index.ts
frontend/src/views/: ArchivePage.tsx  LibraryPage.tsx  ReaderPage.tsx  SettingsPage.tsx
