[package]
name = "app"
version = "0.1.0"
description = "囫囵吞枣"
authors = ["HuLunTunZao"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", default-features = false, features = [
  "wry",
  "common-controls-v6",
  "dynamic-acl",
  "x11",
  "dbus",
  "image-png",
  "image-ico",
] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
